change the file path

--- a/css/product.css
+++ b/css/product.css
@@ -293,7 +293,7 @@
   margin: 0;
 }
 
-/* animation for add to cart icon */
+/* Dynamic effects for add to cart icon */
 .add-cart {
   border: 1px solid #F46969;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
